--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,16 @@ buildscript {
         kotlin_version = '1.3.72'
         nav_version = "2.3.0-alpha04"
         material_version = "1.1.0"
+        junitVersion = '4.12'
+        androidXTestCoreVersion = '1.2.0'
+        androidXTestExtKotlinRunnerVersion = '1.1.1'
+        robolectricVersion = '4.3.1'
+        truthVersion = '1.0.1'
+        archTestingVersion = '2.0.0'
+        coroutinesVersion = '1.2.1'
+        androidXTestCoreVersion = '1.2.0'
+        fragmentVersion = '1.2.4'
+        espressoVersion = '3.2.0'
     }
 
     repositories {
@@ -14,7 +24,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
